--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -64,7 +64,7 @@
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: #F5F7FA; /*oklch(0.922 0 0);*/
-  --ring: #99b1e6; /*oklch(0.708 0 0);*/
+  --ring: #0B40B3; /*oklch(0.708 0 0);*/
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
