--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -81,7 +81,7 @@
 }
 
 .dark {
-  /* --body: #e4ecfd; */
+  --body: oklch(0.145 0 0);
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
